app/less/classes/lyrics-unit.less
@stanza-type-tab-height: 20px;
@lyrics-unit-margin: @stanza-type-tab-height + 5px;
@stanza-overlap-margin: 6.5px;

// For animations between songs.
// .lyrics-song-subsection {
//     transition: opacity 0.15s, left 0.15s;
//     position: relative;
//     left: 0;
//
//     &.fading-out {
//         opacity: 0;
//         left: 100%;
//     }
// }

.lyrics-unit {
    display: flex;
    justify-content: center;
    font-size: @lyric-verse-size;

    /**
     * Apply margin top to stanza block rather than lyrics unit, so that
     * bottom dot stanza can override it when faded out.
     */
    &:not(:first-child) {
        .stanza-block:not(.dots-stanza-hidden) {
            margin-top: @lyrics-unit-margin;
        }
    }

    &.subsequent {
        .stanza-block {
            margin-top: @lyrics-unit-margin - @stanza-type-tab-height - 2.5px;
        }
    }
}

.title-unit {
    font-size: @lyric-title-size;

    .stanza {

        @title-verse-padding: 15px;

        .verse {
            padding: @title-verse-padding;

            .lyrics-audio-button-block {
                margin-top: -@title-verse-padding;
            }
        }
    }
}

.stanza-container {
    position: relative;
}

.stanza-block {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;

    /**
     * Limit width of stanzas when lyric column is full width of screen.
     * This is necessary for Vegan Proclamation. This value doesn't affect
     * the layout anywhere else.
     */
    max-width: 720px;

    &:not(:first-child) {
        margin-left: @stanza-block-margin;
    }

    &.side {
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        &.bottom-only {
            justify-content: flex-end;
        }
    }

    .sub-block {
        margin-top: -@stanza-overlap-margin;
        display: flex;
    }
}

@custom-sub-block-side-padding: 15%;

.custom-sub-block {
    &.left {
        padding-right: @custom-sub-block-side-padding;
    }
    &.overlap {
        margin-top: -@lyrics-unit-margin - @stanza-overlap-margin;
    }
}

.stanza-block:not(.side) {
    .custom-sub-block {
        &.right {
            padding-left: @custom-sub-block-side-padding;
        }
    }
}

.stanza {
    &.stanza-type-title { border: 2px solid @stanza-title-colour; }
    &.stanza-type-refrain { border: 2px solid @stanza-refrain-colour; }
    &.stanza-type-verse { border: 2px solid @stanza-verse-colour; }
    &.stanza-type-prechorus { border: 2px solid @stanza-prechorus-colour; }
    &.stanza-type-chorus { border: 2px solid @stanza-chorus-colour; }
    &.stanza-type-postchorus { border: 2px solid @stanza-postchorus-colour; }
    &.stanza-type-bridge { border: 2px solid @stanza-bridge-colour; }
    &.stanza-type-coda { border: 2px solid @stanza-coda-colour; }
    &.stanza-type-instrumental { border: 2px solid @stanza-instrumental-colour; }
    &.stanza-type-rhyme { border: 2px solid @stanza-rhyme-colour; }
    &.stanza-type-backing { border: 2px solid @stanza-backing-colour; }
    &.stanza-type-response { border: 2px solid @stanza-response-colour; }
}

.stanza-tab {
    position: absolute;
    height: @stanza-type-tab-height;
    top: -@stanza-type-tab-height;
    left: 0;
    border-radius: 7.5px 7.5px 0 0;

    padding: 0 5px;
    color: white;

    text-transform: uppercase;
    white-space: nowrap;
    font-size: 0.6em;
}

.stanza-tab, .stanza-time-bar {
    &.stanza-type-title { background-color: @stanza-title-colour; }
    &.stanza-type-refrain { background-color: @stanza-refrain-colour; }
    &.stanza-type-verse { background-color: @stanza-verse-colour; }
    &.stanza-type-prechorus { background-color: @stanza-prechorus-colour; }
    &.stanza-type-chorus { background-color: @stanza-chorus-colour; }
    &.stanza-type-postchorus { background-color: @stanza-postchorus-colour; }
    &.stanza-type-bridge { background-color: @stanza-bridge-colour; }
    &.stanza-type-coda { background-color: @stanza-coda-colour; }
    &.stanza-type-instrumental { background-color: @stanza-instrumental-colour; }
    &.stanza-type-rhyme { background-color: @stanza-rhyme-colour; }
    &.stanza-type-backing { background-color: @stanza-backing-colour; }
    &.stanza-type-response { background-color: @stanza-response-colour; }
}

